src/tests/fixtures/extend_type/interfaceFirstArgumentType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  foo: string;
}

/** @gqlInterface */
interface IFoo {
  /** @gqlField */
  bar: string;
}

/** @gqlField */
export function greeting(iFoo: IFoo): string {
  return "Hello world!";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/interfaceFirstArgumentType.invalid.ts:8:1 - error: Cannot extend non-object type "IFoo".

8 interface IFoo {
  ~
